Prevodjenje programskih jezika/cas10/2/parser.ypp
%{
#include <iostream>
#include <cstdlib>
#include <string>

#define YYDEBUG 1

extern int yylex();

void yyerror(std::string s){
	std::cerr << s << std::endl;
	exit(EXIT_FAILURE);
}
%}

%union {
	int vrednost;
}

%token <vrednost> broj_token
%type <vrednost> E T F
%start pocetak

%%
pocetak
	: E {
		std::cout << "Vrednost izraza je: " << $1 << std::endl;
	}
	;
E
	: E '+' T {
		$$ = $1 + $3;
	}
	| T {
		$$ = $1;
	}
	;
T
	: T '*' F {
		$$ = $1 * $3;
	}
	| F {
		$$ = $1;
	}
	;
F
	: '(' E ')' {
		$$ = $2;
	}
	| broj_token {
		$$ = $1;
	}
	;
%%

int main(){
	if(yyparse() == 0){
		std::cout << "Uparen je aritemticki izraz!" << std::endl;
	}
	exit(EXIT_SUCCESS);
}
